# nu-completions

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: patch-file-needed.md
patches/: capsh.patch  cec-ctl.patch  cp.patch  dirname.patch  dmraid.patch  flac.patch  flex.patch  foomatic-printjob.patch  git-clone.patch  git-config.patch  git-diff.patch  git-log.patch  git-ls-files.patch  git-rev-list.patch  git-send-email.patch  groffer.patch  gzip.patch  lz4c.patch  man.patch  mdadm.patch  mpicc.patch  mpicxx.patch  mpifort.patch  mpv.patch  node.patch  nping.patch  rtmpdump.patch  setarch.patch  sg_start.patch  smb2-quota.patch  ssltap.patch  systemd-analyze.patch  toe.1m.patch  veritysetup.patch  xmlsec1.patch  yt-dlp.patch  zip.patch
src/: completion_line.rs  completions.rs  config.rs  dir_walker.rs  main.rs  nu.rs  patching.rs
src/patching/: fetch.rs  generate.rs  mod.rs
