[package]
name = "nu-completions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap-verbosity-flag = "2.0.0"
defaultmap = "0.5.0"
shell-words = "1.1.0"
derive_deref = "1.1.1"
async-recursion = "1.0.0"
which = "4.3.0"
joinery = "3.1.0"
femme = "2.2.1"
serde = { version = "1.0.145", features = ["derive"] }
lazy-regex = "2.3.0"

[dependencies.clap]
version = "4.0.15"
features = ["derive"]

[dependencies.anyhow ]
version = "1.0.65"
features = ["backtrace"]

[dependencies.tokio ]
version = "1.21.2"
features = ["full"]

[dependencies.log]
version = "0.4.17"
features = ["kv_unstable"]
