[package]
name = "nu-completion-script"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/dscottboggs/nu-completions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap-verbosity-flag = "2.0.0"
defaultmap = "0.5.0"
shell-words = "1.1.0"
derive_deref = "1.1.1"
async-recursion = "1.0.0"
which = "4.3.0"
femme = "2.2.1"
lazy-regex = "2.3.0"
tempfile = "3.3.0"
beau_collector = "0.2.1"

[dependencies.clap]
version = "4.0.15"
features = ["derive"]

[dependencies.anyhow ]
version = "1.0.65"
features = ["backtrace"]

[dependencies.log]
version = "0.4.17"
features = ["kv_unstable"]

[dependencies.serde]
version = "1.0.145"
features = ["derive"]

[dependencies.reqwest]
version ="0.11.14"
features = ["json"]

[dependencies.tokio]
version = "1.25.0"
features = ["macros", "rt-multi-thread"]